--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </span>
           <div class="intro_title">
             <span>
-              <p>서울교통공사 나눔사무회 임직원을 위한</p>
+              <p>서울교통공사 나눔사무회 임s직원을 위한</p>
             </span>
             <div>
               <h1>특별우대</h1>
