--- a/whanin.html
+++ b/whanin.html
@@ -279,6 +279,27 @@
                     </li>
                     <li>
                       <div class="table_bold">
+                        <p>리무진 옵션 (변경)</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>에스컬레이드</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
+                        <p>선두차 리본 장식</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>제공</p>
+                        <p>
+                          영정사진 탑승용 선두차 리본장식(상가 요청 시 제공)<br /><span class="warning"
+                            >단 차량 상가 준비</span
+                          >
+                        </p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
                         <p>수의</p>
                       </div>
                       <div class="table_nomal">
@@ -406,6 +427,27 @@
                     </li>
                     <li>
                       <div class="table_bold">
+                        <p>리무진 옵션 (변경)</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>에스컬레이드</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
+                        <p>선두차 리본 장식</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>제공</p>
+                        <p>
+                          영정사진 탑승용 선두차 리본장식(상가 요청 시 제공)<br /><span class="warning"
+                            >단 차량 상가 준비</span
+                          >
+                        </p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
                         <p>수의</p>
                       </div>
                       <div class="table_nomal">
@@ -528,6 +570,27 @@
                           왕복400km 제공
                           <br />
                           <span class="warning">km 당 2천원 추가</span>
+                        </p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
+                        <p>리무진 옵션 (변경)</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>에스컬레이드</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
+                        <p>선두차 리본 장식</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>제공</p>
+                        <p>
+                          영정사진 탑승용 선두차 리본장식(상가 요청 시 제공)<br /><span class="warning"
+                            >단 차량 상가 준비</span
+                          >
                         </p>
                       </div>
                     </li>
@@ -667,6 +730,27 @@
                     </li>
                     <li>
                       <div class="table_bold">
+                        <p>리무진 옵션 (변경)</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>에스컬레이드</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
+                        <p>선두차 리본 장식</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>제공</p>
+                        <p>
+                          영정사진 탑승용 선두차 리본장식(상가 요청 시 제공)<br /><span class="warning"
+                            >단 차량 상가 준비</span
+                          >
+                        </p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
                         <p>수의</p>
                       </div>
                       <div class="table_nomal">
@@ -797,6 +881,27 @@
                     </li>
                     <li>
                       <div class="table_bold">
+                        <p>리무진 옵션 (변경)</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>에스컬레이드</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
+                        <p>선두차 리본 장식</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>제공</p>
+                        <p>
+                          영정사진 탑승용 선두차 리본장식(상가 요청 시 제공)<br /><span class="warning"
+                            >단 차량 상가 준비</span
+                          >
+                        </p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
                         <p>수의</p>
                       </div>
                       <div class="table_nomal">
@@ -922,6 +1027,27 @@
                           왕복400km 제공
                           <br />
                           <span class="warning">km 당 2천원 추가</span>
+                        </p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
+                        <p>리무진 옵션 (변경)</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>에스컬레이드</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table_bold">
+                        <p>선두차 리본 장식</p>
+                      </div>
+                      <div class="table_nomal">
+                        <p>제공</p>
+                        <p>
+                          영정사진 탑승용 선두차 리본장식(상가 요청 시 제공)<br /><span class="warning"
+                            >단 차량 상가 준비</span
+                          >
                         </p>
                       </div>
                     </li>
