--- a/yongin.html
+++ b/yongin.html
@@ -211,6 +211,27 @@
                   </li>
                   <li>
                     <div class="table_bold">
+                      <p>리무진 옵션 (변경)</p>
+                    </div>
+                    <div class="table_nomal">
+                      <p>에스컬레이드</p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="table_bold">
+                      <p>선두차 리본 장식</p>
+                    </div>
+                    <div class="table_nomal">
+                      <p>제공</p>
+                      <p>
+                        영정사진 탑승용 선두차 리본장식(상가 요청 시 제공)<br /><span class="warning"
+                          >단 차량 상가 준비</span
+                        >
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="table_bold">
                       <p>수의</p>
                     </div>
                     <div class="table_nomal">
