--- a/teo.html
+++ b/teo.html
@@ -185,7 +185,6 @@
             <div class="service_tab_wrap moblie">
               <div class="tabs">
                 <button id="tab-basic" class="tab-button active">특별우대 360</button>
-                <button id="tab-standard" class="tab-button">특별우대 460</button>
               </div>
               <div class="tab_contents">
                 <div id="content-basic" class="content active">
@@ -315,154 +314,6 @@
                       <div class="table_nomal">
                         <p>제단 지원금 10만원 지원</p>
                         <p>-</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>빈소용품</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>향,양초,부의록,위패,액자리본</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>일회용품</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>200인분</p>
-                        <p>1BOX 지원 (상품 이용 시 무료배송, 그외 배송비 별도)</p>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-                <div id="content-standard" class="content">
-                  <ul>
-                    <li>
-                      <div class="table_bold">
-                        <p>장례지도사</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>2명 (입관서비스)</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>행사복지사</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>1명 (3일 / 16시간)</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>의전관리사</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>4명 (1인 당 각 8시간)</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>고인이송차량</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>1대 (30km)</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>고인리무진, <br />장의버스</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>
-                          왕복400km 제공
-                          <br />
-                          <span class="warning">km 당 2천원 추가</span>
-                        </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>고인리무진 옵션(변경)</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>에스컬레이드</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>선두차 리본 장식</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>제공</p>
-                        <p>
-                          영정사진 탑승용 선두차 리본장식(상가 요청 시 제공)<br /><span class="warning"
-                            >단 차량 상가 준비</span
-                          >
-                        </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>수의</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>명품수의</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>관</p>
-                      </div>
-                      <div class="table_nomal two">
-                        <ul>
-                          <li>
-                            <p>매장 시</p>
-                            <p>오동나무 4.2cm 2단</p>
-                          </li>
-                          <li>
-                            <p>화장 시</p>
-                            <p>오동나무</p>
-                          </li>
-                        </ul>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>화장 시</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>유골함 제공</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>입관용품</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>
-                          염지, 보공, 탈지면, 운아, 예단, 종교경, 명정, 결관바(소창),습신, 베게, 배허리띠, 수시포 등
-                        </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>의전용품</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>남자 검정양복 7벌 대여</p>
-                        <p>여자 검정여상복 7벌 대여</p>
-                        <p>완장, 장갑, 상장(핀) 등</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>꽃장식</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>제단 지원금 20만원 지원</p>
-                        <p>헌화 30송이</p>
                       </div>
                     </li>
                     <li>
@@ -639,157 +490,6 @@
                     </li>
                   </ul>
                 </div>
-                <div id="content-standard" class="content">
-                  <span class="prod_name">
-                    <p>특별우대 460</p>
-                  </span>
-                  <ul>
-                    <li>
-                      <div class="table_bold">
-                        <p>장례지도사</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>2명 (입관서비스)</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>행사복지사</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>1명 (3일 / 16시간)</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>의전관리사</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>4명 (1인 당 각 8시간)</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>고인이송차량</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>1대 (30km)</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>고인리무진, <br />장의버스</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>
-                          왕복400km 제공
-                          <br />
-                          <span class="warning">km 당 2천원 추가</span>
-                        </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>고인리무진 옵션(변경)</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>에스컬레이드</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>선두차 리본 장식</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>제공</p>
-                        <p>
-                          영정사진 탑승용 선두차 리본장식(상가 요청 시 제공)<br /><span class="warning"
-                            >단 차량 상가 준비</span
-                          >
-                        </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>수의</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>명품수의</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>관</p>
-                      </div>
-                      <div class="table_nomal two">
-                        <ul>
-                          <li>
-                            <p>매장 시</p>
-                            <p>오동나무 4.2cm 2단</p>
-                          </li>
-                          <li>
-                            <p>화장 시</p>
-                            <p>오동나무</p>
-                          </li>
-                        </ul>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>화장 시</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>유골함 제공</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>입관용품</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>
-                          염지, 보공, 탈지면, 운아, 예단, 종교경, 명정, 결관바(소창),습신, 베게, 배허리띠, 수시포 등
-                        </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>의전용품</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>남자 검정양복 7벌 대여</p>
-                        <p>여자 검정여상복 7벌 대여</p>
-                        <p>완장, 장갑, 상장(핀) 등</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>꽃장식</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>제단 지원금 20만원 지원</p>
-                        <p>헌화 30송이</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>빈소용품</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>향,양초,부의록,위패,액자리본</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>일회용품</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>200인분</p>
-                        <p>1BOX 지원 (상품 이용 시 무료배송, 그외 배송비 별도)</p>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
               </div>
             </div>
           </section>
@@ -822,7 +522,7 @@
                   <li><img src="img/Incheon_01.jpg" alt="전경사진" /></li>
                   <li><img src="img/Incheon_02.jpg" alt="로비사진" /></li>
                   <li><img src="img/Incheon_03.jpg" alt="빈소사진" /></li>
-                  <li><img src="/img/Incheon_04.jpg" alt="기타사진" /></li>
+                  <li><img src="img/Incheon_04.jpg" alt="기타사진" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
