--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
                   <li><img src="img/Incheon_01.jpg" alt="전경사진" /></li>
                   <li><img src="img/Incheon_02.jpg" alt="로비사진" /></li>
                   <li><img src="img/Incheon_03.jpg" alt="빈소사진" /></li>
-                  <li><img src="/img/Incheon_04.jpg" alt="기타사진" /></li>
+                  <li><img src="img/Incheon_04.jpg" alt="기타사진" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1247,7 +1247,7 @@
                   <li><img src="img/Changwon_01.jpg" alt="창원 장례식장 이미지 전경" /></li>
                   <li><img src="img/Changwon_02.jpg" alt="창원 장례식장 이미지 로비" /></li>
                   <li><img src="img/Changwon_03.jpg" alt="창원 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/Changwon_03.jpg" alt="창원 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Changwon_04.jpg" alt="창원 장례식장 이미지 기타" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
